1999-08-21  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* java/lang/natSystem.cc (getpwuid_adaptor): New overloaded
	function that detects the signature of getpwuid_r.
	(init_properties): Use it.
	* java/util/natDate.cc (ctime_adaptor): Likewise for ctime_r.
	(toString): Use it.

1999-08-20  Kresten Krab Thorup  <krab@samam.daimi.au.dk>

	* interpret.cc (continue1): Implement explicit dispatch table.
	insn_target: Explicit interpreter switch table.  
	SAVE_PC: New macro, moves pc saving code into instructions that
	require so.
	NEXT_INSN: New macro, replaces `goto next_insn' in all insns.
	PC_REGISTER_ASM: New macro.
	INLINE_SWITCH: New macro.  Constrols dispatching strategy.
	opcode: Remove local variable.
	{i,l,f,d}{load,store}_{0,1,2,3}: Expand definitions.
	(POKEI): Use _Jv_word.
	(iinc): Use _Jv_word.
	(dupx): Change reference argument (sp) to pointer.  
	(jvdump): Remove
	
	* interpret.cc: Remove instruction timing instrumentation.  

	* java/lang/natClassLoader.cc (_Jv_PrepareCompiledClass): Changed
	comment.  Don't use _Jv_ClassNameSamePackage. 

	* gnu/gcj/util/path/{SearchPath,ZipFileEntry,DirectoryPathEntry,
	URLPathEntry, CacheEntry}: Removed.
	
	* Makefile.am (ordinary_java_source_files): Remove gnu/gcj/util/path
	package.
	(.java.lo): Rule removed.

	* Makefile.in: Rebuilt.

1999-08-19  Tom Tromey  <tromey@cygnus.com>

	* java/lang/natThread.cc (class locker): New class.
	(join): Use a locker around _Jv_CondWait.
	(sleep): Likewise.

1999-08-18  Tom Tromey  <tromey@cygnus.com>

	* java/lang/ThreadGroup.java: Fixed now-erroneous comment.
	* java/lang/natThread.cc (finish_): Call ThreadGroup.remove.

1999-08-18  Tom Tromey  <tromey@cygnus.com>

	* include/javaprims.h ("Java"): Regenerated namespace decls.

1999-08-18  Kresten Krab Thorup  <krab@gnu.org>

	* java/lang/natClassLoader.cc (_Jv_PrepareCompiledClass): Renamed
	from _Jv_InternClassStrings.   

	* prims.cc (_Jv_RunMain): New function.
	(JvRunMain): Remove gij-support.
